[CAT-FR-GD-09] Refactors schema analysis and warning propagation
- Ensures that warnings, particularly those generated from filtering protected namespace statements, are consistently captured and propagated through the `SchemaStoreResult`.
- Adds explicit test cases to verify warning generation for filtered statements.
- Includes Javadoc for the `SchemaStoreResult` record for better documentation.